# ua-s2100-bt510-2038-main

./: README.md  RegalBeloit-bt510.code-workspace  app.jflash  pm_static.yml  west.yml
Releases/: index.json
Releases/0_0_1/bt510/: bt510-app-mcuboot-0_0_1.signed.hex  bt510-mcuboot-0_0_1.hex
Releases/0_0_3/bt510/: bt510-app-merged-0_0_3.hex
Releases/0_0_4/bt510/: bt510-app-merged-0_0_4.hex
Releases/0_0_5/bt510/: bt510-app-merged-0_0_5.hex
Releases/0_0_6/bt510/: bt510-app-merged-0_0_6.hex
Releases/0_0_7/bt510/: bt510-app-merged-0_0_7.hex
apps/bt510/: CMakeLists.txt  README.md  mcuboot.prj.bt510.conf  prj.bl654_dvk.conf  prj.bt510.conf  regalbeloit-rsa2048.pem
apps/bt510/include/: DataLog.h  Settings.h  accel.h  appversion.h  battery.h  button.h  ct_qrtc.h  fs_mgmt_handlers.h  led.h  smp.h  storage.h  systime.h  temperature.h
apps/bt510/src/: DataLog.c  Settings.c  accel.c  battery.c  button.c  ct_qrtc.c  fs_mgmt_handlers.c  led.c  main.c  smp.c  smp_bluetooth.c  storage.c  systime.c  temperature.c
boards/arm/bl654_dvk/: bl654_dvk.dts
boards/arm/bt510/: Kconfig.defconfig  bt510.dts  bt510_defconfig
